--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/NataliiaHrymud/GoIt-node.js-homeworks#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "shortid": "^2.2.15",
     "yargs": "^16.0.3"
