--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
+    "mongodb": "^3.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "shortid": "^2.2.15",
