--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT = 4000
+PORT = 4004
 MONGODB_URL=mongodb+srv://test_admin:HAVE0mIUNiRhMPic@cluster0.lvhaj.mongodb.net/db-contacts?retryWrites=true&w=majority
+JWT_SECURE_KEY= MmMmmmMN
